Fixed semantic analysis stage